"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2006-10-10	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-03-instance-00-33:
	  Another round of dump output updating, finally gotten rid
		of leading "::" in qualified names consistently, 
		in dump_qualified_name() and dump_hierarchical_name().
	  Tons of test outputs updated accordingly.  
	  No unroll regressions left.  
	  Next: onto create phase regression testing.  


	* HACKT-00-01-04-main-00-80-03-instance-00-32:
	  Updated dumping of qualified names to definition names.  
		Could make definition_base::get_qualified_name() non-virtual.
	  Bunch of tests updated because of key-name reordering, 
		and mostly trivial string substitution.  
	  This takes care of the last of the remaining unroll regressions!


2006-10-09	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-03-instance-00-31:
	  Fixed remaining ICE regressions in template:
		incomplete relaxed type was unrolling into the wrong footprint,
		so we've forced such unrolls to go into a temporary
		auxiliary footprint, until type is (strictly) complete.  
	  One more trivial regression remains (qualified typename),
		before proceeding to create phase.


2006-10-08	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-03-instance-00-30:
	  Fixed some of remaining regressions (3 down):
		Do not try to lookup footprint with incomplete (not strict)
		type because wrong arity, instead create an auxiliary footprint
		(of parameters) for the purposes of unrolling ports.  
	  Remaining regressions (template):
		Footprint isn't being correctly unrolled when unrolling an
		instance with a relaxed template argument.


	* HACKT-00-01-04-main-00-80-03-instance-00-29-merged-exprlist-08:
	  Child branch merge.
	  Summary:
		Now always use dynamic_param_expr_list instead of 